# rosclient

./: .gitignore  GUI_TEST_README.md  LICENSE  MANIFEST.in  README.md  gui_tkinter.py  pyproject.toml  rgbd_fusion.py  ros.py  rosbridge_drone_device.py  rosclient_gui_imgui.py  rosclient_gui_pygame.py  rosclient_gui_test.py  test_ros.py  test_rosclient.py
examples/: example_playback.py  example_recording.py
rosclient/: README.md  __init__.py
rosclient/clients/: __init__.py  airsim_client.py  config.py  mock_client.py  ros_client.py  rosbag_client.py
rosclient/core/: RECORDING_USAGE.md  __init__.py  base.py  player.py  recorder.py  topic_service_manager.py
rosclient/models/: __init__.py  drone.py  state.py
rosclient/processors/: README.md  SAM3_USAGE.md  __init__.py  image_processor.py  plugins.py  pointcloud_processor.py
rosclient/utils/: __init__.py  backoff.py  logger.py
tests/: README.md  __init__.py  conftest.py  test_camera_simple.py
tests/tests_clients/: __init__.py  test_mock_client.py  test_ros_client.py
tests/tests_core/: __init__.py  test_base.py  test_topic_service_manager.py
tests/tests_models/: __init__.py  test_drone.py  test_state.py
tests/tests_utils/: __init__.py  test_backoff.py  test_logger.py
